[project]
name = "rl-meta-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[box2d,other]>=1.2.0",
    "ipykernel>=6.30.0",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "ruff>=0.12.5",
    "seaborn>=0.13.2",
    "swig>=4.3.1",
    "xlsxwriter>=3.2.5",
]
