[project]
name = "rl-meta-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.20.0",
    "gymnasium[box2d,other]==1.1.1",
    "ipykernel>=6.30.0",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pip>=25.2",
    "pyswarms>=1.3.0",
    "rich>=14.2.0",
    "ruff>=0.12.5",
    "scipy==1.12.0",
    "seaborn>=0.13.2",
    "stable-baselines3[extra]>=2.7.0",
    "swig>=4.3.1",
    "xlsxwriter>=3.2.5",
]
